# CDPTopDownTracking

./: .gitignore  README.md
PostShaders3D/DemoBuild/PostShaders3D_Data/: app.info  globalgamemanagers  globalgamemanagers.assets  level0  level0.resS  sharedassets0.assets
PostShaders3D/DemoBuild/PostShaders3D_Data/Resources/: unity_builtin_extra
PostShaders3D/Doc/: DemoScene.odg  Matrices.odg  Post Shaders 3D Documentation.odt  Shader Tree.odg
PostShaders3D/PostShaders3DProject/Assets/FXAA/: FXAAEffect.cs  from catlike coding.txt
PostShaders3D/PostShaders3DProject/Assets/LeosPostProcessing/Core/Scripts/: AmbientEdges.cs  BasicEffect.cs  CannyEdgeDetection.cs  DepthVisualization.cs  EffectCombination.cs  OnlyWireframe.cs  ScreenSpaceAmbientOcclusion.cs
PostShaders3D/PostShaders3DProject/Assets/LeosPostProcessing/Core/Testing/: DepthBasedNormals.shader  DottedHalftone.shader  (+8 more)
PostShaders3D/PostShaders3DProject/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
PostShaders3D/Renders/Blocks/Combinations/: Combinations.xcf
TopDownTracking/: .gitignore  CMakeLists.txt  TopDownTracking.sln
TopDownTracking/CVTests/: CVTests.cpp  CVTests.h  CVTests.vcxproj  CVTests.vcxproj.filters  IMixedCameraManager.h  RealsenseCameraManager.cpp  RealsenseCameraManager.h  example.hpp  main.cpp
TopDownTracking/TopDownTracking/: CVTask.cpp  CVTask.h  IMixedCameraManager.h  InputRecorder.cpp  InputRecorder.h  KinectManager_Windows.cpp  KinectManager_Windows.h  MacOSAtrocities.hpp  MainGLWidget.cpp  MainGLWidget.h  MainWindow.cpp  Map.cpp  Map.h  Pipeline.cpp  Pipeline.h  RealsenseCameraManager.cpp  RealsenseCameraManager.h  TopDownTracking.pro  TopDownTracking.vcxproj  TopDownTracking.vcxproj.filters  cdp_tests.vcxproj  cdp_tests.vcxproj.filters  main.cpp  main_window.ui
TopDownTracking/TopDownTracking/config/: camera.json  default.yaml
TopDownTracking/TopDownTracking/filters/: ThresholdFilter.cpp  ThresholdFilter.h
TopDownTracking/TopDownTracking/pipeline_tasks/: CollisionMapper.cpp  CollisionMapper.h  ContourDetector.cpp  ContourDetector.h  ThresholdFilter.cpp  ThresholdFilter.h
TopDownTracking/TopDownTracking/shaders/: point_cloud.frag  point_cloud.vert
TopDownTracking/pytests/: detector.ipynb  homography.ipynb  opencv.ipynb
TopDownTracking/pytests/.ipynb_checkpoints/: detector-checkpoint.ipynb  homography-checkpoint.ipynb
(+135 files in other folders)
